Set permgen to be able to build all projects at once